--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -26,6 +26,13 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: install cuda stuff
+        run: |
+          sudo apt-get install -y libcusolver-dev-12-8
+          sudo apt-get install -y libcusparse-dev-12-8
+          ls -lhd /usr/local/cuda*
+          ls -l /usr/local/cuda/lib64/libcusolver*
+          ls -l /usr/local/cuda/lib64/libcusparse*
       - name: install gstaichi
         run: |
           set -x
