--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -26,6 +26,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: install vulkan validation layer
+        run: |
+          sudo apt-get install -y vulkan-validationlayers
       - name: install cuda stuff
         run: |
           sudo apt-get install -y libcusolver-dev-12-8
