--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dynamic = ["version"]
 readme = "README.md"
 requires-python = ">=3.10,<4.0"
 dependencies = [
-    "numpy",
+    "numpy>=2.0.0",
     "colorama",
     "dill",
     "pydantic",
