--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,10 +22,10 @@ readme = "README.md"
 requires-python = ">=3.10,<4.0"
 dependencies = [
     "numpy>=2.0.0",
-    "colorama",
-    "dill",
-    "pydantic",
-    "rich",
+    "colorama>=0.4.3",  # 2019
+    "dill>=0.3.1.1",  # 2019
+    "pydantic>=2.0.0",  # rewrite of 1.10 from scratch
+    "rich>=1.0.0",  # first non-beta version; 2020
     "setuptools>=68.0.0",  # Required for Python 3.12+ compatibility
     "cffi>=1.16.0",
 ]
