try pytest-xdist

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,7 +74,8 @@ dev = [
 test = [
     "Pillow",
     "pytest",
-    "git+https://github.com/taichi-dev/pytest-xdist@a3b5ad3038#egg=pytest-xdist",
+    "pytest-xdist",  # let's see if this works...
+    # "git+https://github.com/taichi-dev/pytest-xdist@a3b5ad3038#egg=pytest-xdist",
     # 16.0 upgrade broke xfail, caused fatal errors, see
     # https://github.com/Genesis-Embodied-AI/gstaichi/pull/162
     "pytest-rerunfailures<16.0",
