--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,12 @@ classifiers = [
     "Topic :: Games/Entertainment :: Simulation",
     "Intended Audience :: Science/Research",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-license = { text = "Apache Software License (http://www.apache.org/licenses/LICENSE-2.0)" }
+license = "Apache-2.0"
 keywords = ["graphics", "simulation"]
 dynamic = ["version"]
 readme = "README.md"
