--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -96,7 +96,8 @@ jobs:
         run: |
           pip install *.whl
           python -c "import gstaichi as ti; print(ti.__version__); ti.init(arch=ti.metal)"
-          pip install -r requirements_test.txt
+          pip install --group test
+          pip install -r requirements_test_xdist.txt
           python tests/run_tests.py -v -k test_smoke.py --arch metal,vulkan,cpu
   publish_pypi:
     uses: ./.github/workflows/publish_pypi.yml
