--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -53,6 +53,7 @@ jobs:
         run: |
           pip install torch
           pip install --group test
+          pip install -r requirements_test_xdist.txt
       - name: run tests
         run: |
           ls -lh
