--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,16 @@ dependencies = [
     "cffi>=1.16.0",
 ]
 
+[tool.setuptools.packages.find]
+where = ["python"]
+
+[tool.setuptools]
+package-dir = {"" = "python"}
+include-package-data = true
+
+[tool.setuptools.package-data]
+"gstaichi._lib.core" = ["gstaichi_python.pyi", "py.typed"]
+
 [tool.setuptools_scm]
 write_to = "python/gstaichi/_version.py"
 write_to_template = "__version__ = '{version}'\n"
