1. get autocomplete woring again for kernels, 2. pyright passes again with pure parametre kernel, 3. redo NDArray type from scratch

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,6 +1,6 @@
 {
     "reportInvalidTypeForm": "warning",
-    "include": ["python"],
+    "include": ["python", "tests/python/pyright"],
     "stubPath": "./stubs",
     "extraPaths": ["./stubs"],
     "reportMissingImports": true,
