--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 license = "Apache-2.0"
+license-files = ["LICENSE"]
 keywords = ["graphics", "simulation"]
 dynamic = ["version"]
 readme = "README.md"
@@ -25,7 +26,7 @@ dependencies = [
     "dill",
     "pydantic>=2.0.0",  # rewrite of 1.10 from scratch
     "rich>=1.0.0",  # first non-beta version; 2020
-    "setuptools>=68.0.0",  # Required for Python 3.12+ compatibility
+    "setuptools>=77.0.0",  # Gives project.license-files
     "cffi>=1.16.0",
 ]
 
@@ -35,7 +36,6 @@ where = ["python"]
 [tool.setuptools]
 package-dir = {"" = "python"}
 include-package-data = true
-license-files = ["LICENSE"]
 
 [tool.setuptools.package-data]
 "gstaichi._lib.core" = ["gstaichi_python.pyi", "py.typed"]
@@ -110,7 +110,7 @@ Homepage = "https://github.com/Genesis-Embedded-AI/gstaichi"
 
 [build-system]
 requires = [
-    "setuptools>=68.0.0",
+    "setuptools>=77.0.0",
     "wheel",
     "numpy>=2.0.0",
     "pybind11",
