--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,16 +30,6 @@ dependencies = [
     "cffi>=1.16.0",
 ]
 
-[tool.setuptools.packages.find]
-where = ["python"]
-
-[tool.setuptools]
-package-dir = {"" = "python"}
-include-package-data = true
-
-[tool.setuptools.package-data]
-"gstaichi._lib.core" = ["gstaichi_python.pyi", "py.typed"]
-
 [tool.setuptools_scm]
 write_to = "python/gstaichi/_version.py"
 write_to_template = "__version__ = '{version}'\n"
@@ -122,7 +112,7 @@ requires = [
     "cffi>=1.16.0",
     "setuptools_scm>=6.0",
 ]
-build-backend = "setuptools.build_meta"
+build-backend = "skbuild.build_meta"
 
 [tool.pytest.ini_options]
 filterwarnings = [
