--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -41,6 +41,10 @@ jobs:
         with:
           name: mac_wheel_${{ matrix.MAC_OS_VERSION }}_${{ steps.set_cp_version.outputs.PYTHON_CP_VERSION }}
           path: dist/*.whl
+      - uses: actions/upload-artifact@v4
+        with:
+          name: mac_cpptests_${{ matrix.MAC_OS_VERSION }}_${{ matrix.PYTHON_CP_VERSION }}
+          path: build/gstaichi_cpp_tests
   test:
     needs: build_mac_14_15
     name: Test on Mac
@@ -54,6 +58,11 @@ jobs:
             PYTHON_VERSION: '3.10'
     runs-on: macos-${{ matrix.MAC_OS_VERSION }}
     steps:
+      - uses: actions/checkout@v4
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: ${{ matrix.PYTHON_VERSION}}
       - name: Set Python CP version
         id: set_cp_version
         run: |
@@ -61,15 +70,14 @@ jobs:
           cp=$(python -c "from packaging import tags; print(next(tags.sys_tags()).interpreter)")
           echo "PYTHON_CP_VERSION=${cp}"
           echo "PYTHON_CP_VERSION=${cp}" >> $GITHUB_OUTPUT
-      - uses: actions/checkout@v4
-      - name: Python check
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.PYTHON_VERSION}}
       - uses: actions/download-artifact@v4
         with:
           name: mac_wheel_15_${{ steps.set_cp_version.outputs.PYTHON_CP_VERSION }}
           path: dist
+      - uses: actions/download-artifact@v4
+        with:
+          name: mac_cpptests_15_${{ matrix.PYTHON_CP_VERSION }}
+          path: build
       - name: Mac OS X install
         run: |
           bash .github/workflows/scripts_new/macosx/3_install.sh
