windows pypi publish waits for test to finish first 😅

--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -113,7 +113,7 @@ jobs:
   publish_pypi:
     uses: ./.github/workflows/publish_pypi.yml
     if: github.event_name == 'release'
-    needs: win_build
+    needs: win_test
     permissions:
       id-token: write
       contents: read
