--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ dev = [
     # pybind11 3.0.0 caused builds to start failing.
     # whilst we could probably get 3.0.0 working too, I feel that x.0.0 releases, in opensource (and closed source
     # too often) might not always be very stable, so we might want to wait 3-6 months before trying it?)
-    "pybind11>=3.0.1,<4.0.0",
+    "pybind11<3.0.0",
     "pybind11-stubgen",
     "pydantic",
     "GitPython",
@@ -107,7 +107,7 @@ requires = [
     "setuptools>=77.0.0",
     "wheel",
     "numpy>=2.0.0",
-    "pybind11>=3.0.1,<4.0.0",
+    "pybind11<3.0.0",
     "pybind11-stubgen",
     "cmake>=3.11",
     "scikit-build",
