--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -52,10 +52,11 @@ jobs:
       fail-fast: false
       matrix:
         MAC_OS_VERSION: [15]
-        PYTHON_VERSION: ['3.10', '3.11', '3.12', '3.13']
-        include:
-          - MAC_OS_VERSION: 14
-            PYTHON_VERSION: '3.10'
+        # PYTHON_VERSION: ['3.10', '3.11', '3.12', '3.13']
+        PYTHON_VERSION: ['3.10']
+        # include:
+        #   - MAC_OS_VERSION: 14
+        #     PYTHON_VERSION: '3.10'
     runs-on: macos-${{ matrix.MAC_OS_VERSION }}
     steps:
       - uses: actions/checkout@v4
@@ -81,6 +82,10 @@ jobs:
       - name: Mac OS X install
         run: |
           bash .github/workflows/scripts_new/macosx/3_install.sh
+      - name: 'setup for testing'
+        run: |
+          pip install --prefer-binary --group test
+          pip install -r requirements_test_xdist.txt
       - name: Setup tmate session
         uses: mxschmitt/action-tmate@v3
         timeout-minutes: 360
