--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -37,6 +37,13 @@ jobs:
       - name: Mac OS X build
         run: |
           bash .github/workflows/scripts_new/macosx/2_build.sh
+      - name: 'setup for testing'
+        run: |
+          pip install --prefer-binary --group test
+          pip install -r requirements_test_xdist.txt
+      - name: Setup tmate session
+        uses: mxschmitt/action-tmate@v3
+        timeout-minutes: 360
       - uses: actions/upload-artifact@v4
         with:
           name: mac_wheel_${{ matrix.MAC_OS_VERSION }}_${{ steps.set_cp_version.outputs.PYTHON_CP_VERSION }}
