--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-license = "Apache-2.0"
+license = {file = "LICENSE"}
 keywords = ["graphics", "simulation"]
 dynamic = ["version"]
 readme = "README.md"
