--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -1,4 +1,4 @@
-name: Linux x86
+name: Linux
 on:
   pull_request:
     branches:
@@ -9,23 +9,29 @@ concurrency:
   cancel-in-progress: true
 jobs:
   build:
-    name: Linux x86 Build
-    runs-on: ubuntu-22.04
+    strategy:
+      fail-fast: false
+      matrix:
+        # Developing directly on ubuntu arm not supported currently.
+        # Need to dev inside a manylinux container, when developing using linux arm.
+        OS: ['ubuntu-22.04']
+    name: Linux ${{ matrix.OS }} Build
+    runs-on: ${{ matrix.OS }}
     steps:
       - uses: actions/checkout@v4
       - name: Python check
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-      - name: Linux x86 prerequisites
+      - name: Linux prerequisites
         run: |
           bash .github/workflows/scripts_new/linux/1_prerequisites.sh
-      - name: Linux x86 build
+      - name: Linux build
         run: |
           bash .github/workflows/scripts_new/linux/2_build.sh
-      - name: Linux x86 install
+      - name: Linux install
         run: |
           bash .github/workflows/scripts_new/linux/3_install.sh
-      - name: Linux x86 test
+      - name: Linux test
         run: |
           bash .github/workflows/scripts_new/linux/4_test.sh
