Improve performance of LaunchKernelContext. Remove texture support.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,7 +140,8 @@ if (TI_BUILD_TESTS)
   include(cmake/GsTaichiTests.cmake)
 endif()
 
-message("C++ Flags: ${CMAKE_CXX_FLAGS}")
+string(TOUPPER "${CMAKE_BUILD_TYPE}" _BUILD_TYPE)
+message("C++ Flags: ${CMAKE_CXX_FLAGS_${_BUILD_TYPE}} ${CMAKE_CXX_FLAGS}")
 message("Build type: ${CMAKE_BUILD_TYPE}")
 
 if (NOT TI_WITH_CUDA)
