--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -2,8 +2,10 @@ name: Linters, using linux
 on:
   workflow_dispatch:
   pull_request:
-    branches:
-      - main
+    types:
+      - opened
+      - reopened
+      - synchronize
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
   cancel-in-progress: true
