--- a/.github/workflows/macosx.yml
+++ b/.github/workflows/macosx.yml
@@ -1,8 +1,10 @@
 name: Mac OS
 on:
   pull_request:
-    branches:
-      - main
+    types:
+      - opened
+      - reopened
+      - synchronize
   workflow_dispatch:
   release:
     types: [published]
