--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -16,8 +16,8 @@ on:
         type: string
   workflow_dispatch:
 jobs:
-  build:
-    name: Test gpu
+  test_linux_cpp_tests:
+    name: Test Linux CPP Tests
     runs-on: gpu-t4-4-core
     steps:
       - uses: actions/checkout@v4
@@ -59,7 +59,88 @@ jobs:
           ls -lh
           chmod +x gstaichi_cpp_tests
           ls -lh
-          export TI_LIB_DIR="$(python -c 'import gstaichi as ti; print(ti.__path__[0])' | tail -n 1)/_lib/runtime"
           ./gstaichi_cpp_tests
+  test_linux_cuda:
+    name: Test Linux CUDA
+    runs-on: gpu-t4-4-core
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.cpptests_artifact_name }}
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.wheel_artifact_name }}
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: install vulkan validation layer
+        run: |
+          sudo apt-get install -y vulkan-validationlayers
+      - name: install cuda stuff
+        run: |
+          sudo apt-get install -y libcusolver-dev-12-8
+          sudo apt-get install -y libcusparse-dev-12-8
+          ls -lhd /usr/local/cuda*
+          ls -l /usr/local/cuda/lib64/libcusolver*
+          ls -l /usr/local/cuda/lib64/libcusparse*
+      - name: install gstaichi
+        run: |
+          set -x
+          mkdir -p dist
+          mv *.whl dist/
+          pip install dist/*.whl
+      - name: install torch and requirements_test.txt
+        run: |
+          pip install torch
+          pip install --group test
+          pip install -r requirements_test_xdist.txt
+      - name: run tests
+        run: |
+          ls -lh
           python tests/run_tests.py -r 3 -v --arch cuda
+  test_linux_vulkan:
+    name: Test Linux Vulkan
+    runs-on: gpu-t4-4-core
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.cpptests_artifact_name }}
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.wheel_artifact_name }}
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: install vulkan validation layer
+        run: |
+          sudo apt-get install -y vulkan-validationlayers
+      - name: install cuda stuff
+        run: |
+          # FIXME: should we install cuda stuff for vulkan tests?
+          sudo apt-get install -y libcusolver-dev-12-8
+          sudo apt-get install -y libcusparse-dev-12-8
+          ls -lhd /usr/local/cuda*
+          ls -l /usr/local/cuda/lib64/libcusolver*
+          ls -l /usr/local/cuda/lib64/libcusparse*
+      - name: install gstaichi
+        run: |
+          set -x
+          mkdir -p dist
+          mv *.whl dist/
+          pip install dist/*.whl
+      - name: install torch and requirements_test.txt
+        run: |
+          pip install torch
+          pip install --group test
+          pip install -r requirements_test_xdist.txt
+      - name: run tests
+        run: |
           python tests/run_tests.py -r 3 -v --arch vulkan
