hopefuly actually fix cpp tests

--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -59,7 +59,7 @@ jobs:
           ls -lh
           chmod +x gstaichi_cpp_tests
           ls -lh
-          export TI_LIB_DIR="$(python -c 'import gstaichi as ti; print(ti.__path__[0])'
+          export TI_LIB_DIR="$(python -c 'import gstaichi as ti; print(ti.__path__[0])' | tail -n 1)/_lib/runtime"
           ./gstaichi_cpp_tests
   test_linux_cuda:
     name: Test Linux CUDA
