--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -52,7 +52,7 @@ jobs:
           chmod +x gstaichi_cpp_tests
           ls -lh
           export TI_LIB_DIR="$(python -c 'import gstaichi as ti; print(ti.__path__[0])' | tail -n 1)/_lib/runtime"
-          ./gstaichi_cpp_tests
+          ./gstaichi_cpp_tests --gtest_filter=-AMDGPU.*
   test_linux_cuda:
     name: Test Linux CUDA
     runs-on: gpu-t4-4-core
