--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -88,7 +88,7 @@ jobs:
       - name: run tests
         run: |
           ls -lh
-          python tests/run_tests.py -r 3 -v --arch cuda
+          python tests/run_tests.py -r 1 -v --arch cuda
   test_linux_vulkan:
     name: Test Linux Vulkan
     runs-on: gpu-t4-4-core
@@ -120,3 +120,31 @@ jobs:
       - name: run tests
         run: |
           python tests/run_tests.py -r 3 -v --arch vulkan
+  test_linux_amdgpu:
+    name: Test Linux AMD GPU
+    runs-on: amdgpu
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.wheel_artifact_name }}
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: install gstaichi
+        run: |
+          set -x
+          mkdir -p dist
+          mv *.whl dist/
+          pip install dist/*.whl
+      - name: install torch and requirements_test.txt
+        run: |
+          pip install torch
+          pip install --group test
+          pip install -r requirements_test_xdist.txt
+      - name: run tests
+        run: |
+          python tests/run_tests.py -r 1 -v --arch amdgpu
