--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -147,4 +147,7 @@ jobs:
           pip install -r requirements_test_xdist.txt
       - name: run tests
         run: |
+          # Next 2 lines are kind of hacky
+          export PATH=$PATH:$HOME/.cache/ti-build-cache/llvm-20.1.0-x86-202511141226/bin
+          chmod +x $HOME/.cache/ti-build-cache/llvm-20.1.0-x86-202511141226/bin/ld.lld
           python tests/run_tests.py -r 1 -v --arch amdgpu
