--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -14,8 +14,44 @@ on:
         description: 'Name of the cpp tests artifact to download'
         required: true
         type: string
+    secrets:
+      amdgpu_runner_region:
+        description: 'The region of the AMD GPU runner to start'
+        required: true
+      amdgpu_runner_instance_id:
+        description: 'The instance ID of the AMD GPU runner to start'
+        required: true
+      aws_github_runner_access_key_id:
+        required: true
+      aws_github_runner_secret_access_key:
+        required: true
   workflow_dispatch:
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 jobs:
+  start_amdgpu_runner:
+    name: Start AMD GPU Runner
+    runs-on: ubuntu-24.04
+    steps:
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.aws_github_runner_access_key_id }}
+          aws-secret-access-key: ${{ secrets.aws_github_runner_secret_access_key }}
+          aws-region: ${{ secrets.amdgpu_runner_region }}
+      - name: start amd gpu runner
+        run: |
+          pip install awscli
+          # we try a few times, in case the instance was shutting down, or starts to shut down
+          for i in {1..5}; do {
+            aws ec2 start-instances --instance-ids ${{ secrets.amdgpu_runner_instance_id }} --region ${{ secrets.amdgpu_runner_region }}
+            sleep 300
+          } done
   test_linux_cpp_tests:
     name: Test Linux CPP Tests
     runs-on: gpu-t4-4-core
@@ -52,7 +88,7 @@ jobs:
           chmod +x gstaichi_cpp_tests
           ls -lh
           export TI_LIB_DIR="$(python -c 'import gstaichi as ti; print(ti.__path__[0])' | tail -n 1)/_lib/runtime"
-          ./gstaichi_cpp_tests
+          ./gstaichi_cpp_tests --gtest_filter=-AMDGPU.*
   test_linux_cuda:
     name: Test Linux CUDA
     runs-on: gpu-t4-4-core
@@ -88,7 +124,7 @@ jobs:
       - name: run tests
         run: |
           ls -lh
-          python tests/run_tests.py -r 3 -v --arch cuda
+          python tests/run_tests.py -r 1 -v --arch cuda
   test_linux_vulkan:
     name: Test Linux Vulkan
     runs-on: gpu-t4-4-core
@@ -120,3 +156,34 @@ jobs:
       - name: run tests
         run: |
           python tests/run_tests.py -r 3 -v --arch vulkan
+  test_linux_amdgpu:
+    name: Test Linux AMD GPU
+    runs-on: amdgpu
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.wheel_artifact_name }}
+      - name: Python check
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      - name: install gstaichi
+        run: |
+          set -x
+          mkdir -p dist
+          mv *.whl dist/
+          pip install dist/*.whl
+      - name: install torch and requirements_test.txt
+        run: |
+          pip install torch
+          pip install --group test
+          pip install -r requirements_test_xdist.txt
+      - name: run tests
+        run: |
+          # Next 2 lines are kind of hacky
+          export PATH=$PATH:$HOME/.cache/ti-build-cache/llvm-20.1.0-x86-202511141226/bin
+          chmod +x $HOME/.cache/ti-build-cache/llvm-20.1.0-x86-202511141226/bin/ld.lld
+          python tests/run_tests.py -t 4 -r 1 -v --arch amdgpu
