--- a/.github/workflows/test_gpu.yml
+++ b/.github/workflows/test_gpu.yml
@@ -178,7 +178,7 @@ jobs:
           pip install dist/*.whl
       - name: install torch and requirements_test.txt
         run: |
-          pip install torch
+          pip install torch --index-url https://download.pytorch.org/whl/rocm6.4
           pip install --group test
           pip install -r requirements_test_xdist.txt
       - name: run tests
